# AbstractSkill

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  SECURITY.md  llms-full.txt  llms.txt  pyproject.toml
.cursor/: hooks.json  mcp.json
.cursor/hooks/: agora_wait.sh
.cursor/rules/: agora.md  agora.mdc  skill-seat.mdc
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
docs/: KnowledgeBase.md  README.md  api.md  architecture.md  faq.md  getting-started.md  skills-catalog.md  skills-flows-mcp.md  troubleshooting.md  trust-network-position.md  trust.md
docs/backlog/: overview.md
docs/backlog/proposed/: 0006_automated_periodic_reviews.md  0007_admission_lint.md
docs/backlog/recurrent/: advisory-registry-review.md
registry/: advisories.yaml  catalog.yaml  guidance.yaml  validations.yaml
registry/drafts/: CANDIDATES.md
registry/drafts/agora-collaboration/: SKILL.md
registry/licenses/: verification-before-completion.LICENSE
registry/skills/abstractframework-gateway/: SKILL.md
registry/skills/adr/: SKILL.md
registry/skills/adversarial-iteration/: SKILL.md
registry/skills/architect/: SKILL.md
registry/skills/backlog/: SKILL.md
registry/skills/cicd/: SKILL.md
registry/skills/coredoc/: SKILL.md
registry/skills/review/: SKILL.md
scripts/: production_drive.py  refresh_shelf.py  vendor_skill.py
src/abstractskill/: __init__.py  catalog.py  errors.py  hash.py  loader.py  models.py  parser.py  policy.py  prompt.py  selection.py  tree.py  trust.py  validation.py
tests/: test_catalog.py  test_loader.py  test_parser.py  test_policy.py  test_refresh_shelf_pins.py  test_selection.py  test_shelf.py  test_tree.py  test_trust.py  test_vendor_script.py
(+29 files in other folders)
